syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.erivelton.pix";
option java_outer_classname = "PixGrpc";
option objc_class_prefix = "HLW";

package br.com.erivelton.pix;

service PixGrpcService {
  rpc registrarPix (PixRequest) returns (PixResponse) {}
}

enum TipoChave{
  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoConta{
  CONTA_DESCONHECIDA = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;
}

message PixRequest {
  string clienteId = 1;
  string valorChave = 2;
  TipoChave tipoChave = 3;
  TipoConta tipoConta = 4;
}

message PixResponse {
  int64 PixID = 1;
  string clienteId = 2;
}