syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.erivelton.pix.removechave";
option java_outer_classname = "RemovePixGrpc";
option objc_class_prefix = "HLW";

package br.com.erivelton.pix;

service RemovePixGrpcService{
  rpc remova(PixRemovidoRequisicao) returns (PixRemovidoResposta){}
}

message PixRemovidoRequisicao {
  int64 pixId = 1;
  string clienteId = 2;
}

message PixRemovidoResposta {
  string mensagem = 1;
}